--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php" : ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+		"oomphinc/composer-installers-extender": "^1.0"
     },
     "autoload": {
         "psr-4": {
