--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php" : ">=5.5.9",
-        "laravel/framework": "5.2.*",
+		"illuminate/support": "5.1.*|5.2.*",
+		"illuminate/view": "5.1.*|5.2.*",
+		"illuminate/console": "5.1.*|5.2.*",
 		"oomphinc/composer-installers-extender": "^1.0"
     },
     "autoload": {
